# UHS-machine-learning

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  vercel.json
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  cookie.txt  main.py  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 001_initial_schema.py
backend/src/anomaly_detection/: __init__.py  app.py  config.py  logging.py
backend/src/anomaly_detection/db/: __init__.py  engine.py  init_db.py  models.py  session.py
backend/src/anomaly_detection/ml/: __init__.py  autoencoder.py  base.py  decision_tree.py  evaluate.py  halfspace_trees.py  isolation_forest.py  lightgbm_model.py  random_forest.py  train.py  xgboost_model.py
backend/src/anomaly_detection/pipeline/: __init__.py  data_card.py  features.py  generate_fixture.py  ingest.py  process_nsl_kdd.py  run.py  split.py
backend/src/anomaly_detection/schemas/: common.py  flows.py
backend/src/anomaly_detection/services/: inference.py  notifications.py
data/fixtures/: cicids2017_sample.csv
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
simulator/: Dockerfile  pyproject.toml
simulator/src/simulator/: __init__.py  config.py  replay.py
tests/: conftest.py
tests/integration/: test_api_alerts.py  test_api_flows.py  test_api_models.py  test_auth_gating.py  test_feedback.py  test_simulation.py
tests/unit/: test_drift_math.py  test_pipeline.py  test_schemas.py  test_scoring.py  test_split.py
(+19 files in other folders)
