[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anomaly-simulator"
version = "0.1.0"
description = "Streaming traffic simulator for the anomaly detection system"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "pandas.*",
]
ignore_missing_imports = true
